# Operating-Systems-Project

./: CMakeLists.txt  FCFS.c  Queue.c  README.md  RR.c  SJF.c  SRT.c  a.out  helper.c  includes.h  includes.h.gch  main.c  output.c  output04-full.txt  plan.txt  simout.txt  srt04.txt
